pkginclude_HEADERS = VCommon.h \
						VConfig.h \
						VException.h \
						VFile.h \
						VFileInfo.h \
						VLog.h \
						VMD5Hasher.h \
						VMap.h \
						VMutex.h \
						VObject.h \
						VPlatform.h \
						VQueue.h \
						VString.h \
						VTime.h \
						VVector.h \
						VTypes.h \
						VSemaphore.h \
						VSocket.h \
						VAsyncSocket.h \
						VSockAddr.h \
						VSocketCommon.h \
						VCommon.h \
						VErrorBlock.h \
						VException.h
