INCLUDES = -I$(top_srcdir)/include
lib_LIBRARIES = libvutils.a
libvutils_a_SOURCES = VConfig.cpp \
						VException.cpp \
						VFile.cpp \
						VLog.cpp \
						VMD5Hasher.cpp \
						VObject.cpp \
						VString.cpp \
						VTime.cpp \
						VSocket.cpp \
						VAsyncSocket.cpp \
						VErrorBlock.cpp
