lib_LTLIBRARIES = libvutils.la
libvutils_la_SOURCES = VConfig.cpp \
						VException.cpp \
						VFile.cpp \
						VLog.cpp \
						VMD5Hasher.cpp \
						VObject.cpp \
						VString.cpp \
						VTime.cpp \
						VSocket.cpp \
						VAsyncSocket.cpp \
						VErrorBlock.cpp
libvutils_la_LDFLAGS = -version-info 0:9:0
libvutils_la_CPPFLAGS = -I@top_srcdir@

pkginclude_HEADERS = VCommon.h \
						VConfig.h \
						VException.h \
						VFile.h \
						VFileInfo.h \
						VList.h \
						VLog.h \
						VMD5Hasher.h \
						VMap.h \
						VMutex.h \
						VObject.h \
						VPlatform.h \
						VQueue.h \
						VString.h \
						VTime.h \
						VVector.h \
						VTypes.h \
						VSemaphore.h \
						VSocket.h \
						VAsyncSocket.h \
						VSockAddr.h \
						VSocketCommon.h \
						VCommon.h \
						VErrorBlock.h \
						VException.h
